--- a/workspace/link-addIcon.html
+++ b/workspace/link-addIcon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookmark</title>
+    <title>AddIcon</title>
     <style>
       body{
         max-width: 450px;
@@ -58,21 +58,21 @@
     </style>
 </head>
 <body>
-  <div class="bookmark">
+  <div class="addicon">
     <div class="header">
       <p>PET LOVER</p>
     </div>
     <div class="content">
       <div class="content-info">
-        <img src="img/bookmark.png">
+        <img src="img/addIcon.png">
         <p>
-          <strong>즐겨찾기</strong>가 추가됩니다.<br>
-          추가하시겠습니까?
+          바탕화면에 <strong>바로가기 아이콘</strong>이 설치됩니다.<br>
+          설치하시겠습니까?
         </p>
       </div>
     </div>
     <div class="button">
-      <button id="add">추가하기</button>
+      <button id="add">설치하기</button>
       <button id="cancel">취소하기</button>
     </div>
   </div>
