--- a/workspace/login.html
+++ b/workspace/login.html
@@ -335,7 +335,7 @@
           </p>
         </div>
         <div id="addlog-button">
-          <a href="#">JOIN US</a>
+          <a href="join.html">JOIN US</a>
         </div>
       </div>
     </form>
