--- a/workspace/main-page.html
+++ b/workspace/main-page.html
@@ -451,23 +451,23 @@
       <div class="main-banner">
         <ul>
           <li class="main-banner-list">
-            <a href="#">
+            <a href="join.html">
               <img src="img/content01.png" alt="join">
             </a>
           </li>
           <li class="main-banner-list">
             <a href="#">
-              <img src="img/content02.png" alt="join">
+              <img src="img/content02.png" alt="bestitem">
             </a>
           </li>
           <li class="main-banner-list">
             <a href="#">
-              <img src="img/content03.png" alt="join">
+              <img src="img/content03.png" alt="gooditem">
             </a>
           </li>
           <li class="main-banner-list">
             <a href="#">
-              <img src="img/content04.png" alt="join">
+              <img src="img/content04.png" alt="queryPage">
             </a>
           </li>
         </ul>
@@ -772,7 +772,7 @@
           CONTACT SHOP INFORMATION
         </p>
         <p id="info-sec">
-          T. 010-4554-0158 운영시간 | 09:00~17:00 주말, 공휴일은 휴무
+          T. 010-1234-5678 운영시간 | 09:00~17:00 주말, 공휴일은 휴무
         </p>
       </div>
 
