--- a/workspace/join.html
+++ b/workspace/join.html
@@ -308,7 +308,7 @@
       </ul>
     </div>
   </header>
-  <container>
+  <main>
     <form class="join">
       <table class="join-table">
         <div class="join-title">
@@ -674,7 +674,7 @@
         <a href="main-page.html" type="submit" id="join-button">회원가입</a>
       </div>
     </form>
-  </container>
+  </main>
   <footer>
     <div class="customer">
       <div class="customer-center">
