--- a/workspace/login.html
+++ b/workspace/login.html
@@ -309,7 +309,7 @@
       </ul>
     </div>
   </header>
-  <container>
+  <main>
     <form class="login">
       <div class="login-page">
         <div id="login-title">
@@ -339,7 +339,7 @@
         </div>
       </div>
     </form>
-  </container>
+  </main>
   <footer>
     <div class="customer">
       <div class="customer-center">
