--- a/workspace/main-page.html
+++ b/workspace/main-page.html
@@ -446,7 +446,7 @@
       </div>
   </slider>
   <hr>
-  <container>
+  <main>
     <div class="content_m">
       <div class="main-banner">
         <ul>
@@ -497,31 +497,31 @@
           <div class="best-items active"> <!-- 사료 -->
             <ul class="best-item">
               <li>
-                <a href="#">
+                <a href="#" data-target="0">
                   <img src="img/best-feed01.png" alt="데이스포 초유분유 200g">
                   <span>데이스포 초유분유 200g</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="1">
                   <img src="img/best-feed02.png" alt="도기프랜드 클라쎄밀 분유 180g">
                   <span>도기프랜드 클라쎄밀 분유 180g</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="2">
                   <img src="img/best-feed03.png" alt="디럭스락 분유 200g">
                   <span>디럭스락 분유 200g</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="3">
                   <img src="img/best-feed04.png" alt="뉴트리나 퍼피 2.1kg">
                   <span>뉴트리나 퍼피 2.1kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="4">
                   <img src="img/best-feed05.png" alt="뉴트리나 어덜트 연어 2.1kg">
                   <span>뉴트리나 어덜트 연어 2.1kg</span>
                 </a>
@@ -531,31 +531,31 @@
           <div class="best-items"> <!-- 간식 -->
             <ul class="best-item">
               <li>
-                <a href="#">
+                <a href="#" data-target="5">
                   <img src="img/best-snack01.png" alt="뉴트리나 다이어트 2.1kg">
                   <span>뉴트리나 다이어트 2.1kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="6">
                   <img src="img/best-snack02.png" alt="CP 클래식 독 어덜트 소고기 2kg">
                   <span>CP 클래식 독 어덜트 소고기 2kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="7">
                   <img src="img/best-snack03.png" alt="CP 클래식 독 어덜트 닭고기 2kg">
                   <span>CP 클래식 독 어덜트 닭고기 2kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="8">
                   <img src="img/best-snack04.png" alt="CP 클래식 독 어덜트 양고기 2kg">
                   <span>CP 클래식 독 어덜트 양고기 2kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="9">
                   <img src="img/best-snack05.png" alt="CP 클래식 퍼피 밀크 2kg">
                   <span>CP 클래식 퍼피 밀크 2kg</span>
                 </a>
@@ -565,31 +565,31 @@
           <div class="best-items"> <!-- 목욕/미용 -->
             <ul class="best-item">
               <li>
-                <a href="#">
+                <a href="#" data-target="10">
                   <img src="img/best-bath01.png" alt="CP 클래식 어덜트 스몰 브리드 소고기 2kg">
                   <span>CP 클래식 어덜트 스몰 브리드 소고기 2kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="11">
                   <img src="img/best-bath02.png" alt="소프트플러스 참좋은 황태사료 연어 1kg">
                   <span>소프트플러스 참좋은 황태사료 연어 1kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="12">
                   <img src="img/best-bath03.png" alt="소프트플러스 참좋은 황태사료 오리 1kg">
                   <span>소프트플러스 참좋은 황태사료 오리 1kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="13">
                   <img src="img/best-bath04.png" alt="아침애 수제사료 한우 2.4kg">
                   <span>아침애 수제사료 한우 2.4kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="14">
                   <img src="img/best-bath05.png" alt="아침애 수제사료 오리 감자 연어 3kg">
                   <span>아침애 수제사료 오리 감자 연어 3kg</span>
                 </a>
@@ -599,31 +599,31 @@
           <div class="best-items"> <!-- 영양제/의약외품/치아관리 -->
             <ul class="best-item">
               <li>
-                <a href="#">
+                <a href="#" data-target="15">
                   <img src="img/best-md01.png" alt="아침애 수제사료 오리 연어 감자 1kg">
                   <span>아침애 수제사료 오리 연어 감자 1kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="16">
                   <img src="img/best-md02.png" alt="아침애 수제사료 피부 개선 3kg">
                   <span>아침애 수제사료 피부 개선 3kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="17">
                   <img src="img/best-md03.png" alt="아침애 수제사료 다이어트 1kg">
                   <span>아침애 수제사료 다이어트 1kg</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="18">
                   <img src="img/best-md04.png" alt="아침애 수제사료 한우 800g">
                   <span>아침애 수제사료 한우 800g</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" data-target="18">
                   <img src="img/best-md04.png" alt="아침애 수제사료 한우 800g">
                   <span>아침애 수제사료 한우 800g</span>
                 </a>
@@ -640,25 +640,25 @@
             <table class="new-items">
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="0">
                     <img src="img/best-feed01.png" alt="데이스포 초유분유 200g">
                     <span>데이스포 초유분유 200g</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="1">
                     <img src="img/best-feed02.png" alt="도기프랜드 클라쎄밀 분유 180g">
                     <span>도기프랜드 클라쎄밀 분유 180g</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="2">
                     <img src="img/best-feed03.png" alt="디럭스락 분유 200g">
                     <span>디럭스락 분유 200g</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="3">
                     <img src="img/best-feed04.png" alt="뉴트리나 퍼피 2.1kg">
                     <span>뉴트리나 퍼피 2.1kg</span>
                   </a>
@@ -666,25 +666,25 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="4">
                     <img src="img/best-feed05.png" alt="뉴트리나 어덜트 연어 2.1kg">
                     <span>뉴트리나 어덜트 연어 2.1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="5">
                     <img src="img/best-snack01.png" alt="뉴트리나 다이어트 2.1kg">
                     <span>뉴트리나 다이어트 2.1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="6">
                     <img src="img/best-snack02.png" alt="CP 클래식 독 어덜트 소고기 2kg">
                     <span>CP 클래식 독 어덜트 소고기 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="7">
                     <img src="img/best-snack03.png" alt="CP 클래식 독 어덜트 닭고기 2kg">
                     <span>CP 클래식 독 어덜트 닭고기 2kg</span>
                   </a>
@@ -692,25 +692,25 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="8">
                     <img src="img/best-snack04.png" alt="CP 클래식 독 어덜트 양고기 2kg">
                     <span>CP 클래식 독 어덜트 양고기 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="9">
                     <img src="img/best-snack05.png" alt="CP 클래식 퍼피 밀크 2kg">
                     <span>CP 클래식 퍼피 밀크 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="10">
                     <img src="img/best-bath01.png" alt="CP 클래식 어덜트 스몰 브리드 소고기 2kg">
                     <span>CP 클래식 어덜트 스몰 브리드 소고기 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="11">
                     <img src="img/best-bath02.png" alt="소프트플러스 참좋은 황태사료 연어 1kg">
                     <span>소프트플러스 참좋은 황태사료 연어 1kg</span>
                   </a>
@@ -718,25 +718,25 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="12">
                     <img src="img/best-bath03.png" alt="소프트플러스 참좋은 황태사료 오리 1kg">
                     <span>소프트플러스 참좋은 황태사료 오리 1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="13">
                     <img src="img/best-bath04.png" alt="아침애 수제사료 한우 2.4kg">
                     <span>아침애 수제사료 한우 2.4kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="14">
                     <img src="img/best-bath05.png" alt="아침애 수제사료 오리 감자 연어 3kg">
                     <span>아침애 수제사료 오리 감자 연어 3kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="15">
                     <img src="img/best-md01.png" alt="아침애 수제사료 오리 연어 감자 1kg">
                     <span>아침애 수제사료 오리 연어 감자 1kg</span>
                   </a>
@@ -744,19 +744,19 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="16">
                     <img src="img/best-md02.png" alt="아침애 수제사료 피부 개선 3kg">
                     <span>아침애 수제사료 피부 개선 3kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="17">
                     <img src="img/best-md03.png" alt="아침애 수제사료 다이어트 1kg">
                     <span>아침애 수제사료 다이어트 1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="18">
                     <img src="img/best-md04.png" alt="아침애 수제사료 한우 800g">
                     <span>아침애 수제사료 한우 800g</span>
                   </a>
@@ -784,25 +784,25 @@
             <table class="new-items">
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="0">
                     <img src="img/best-feed01.png" alt="데이스포 초유분유 200g">
                     <span>데이스포 초유분유 200g</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="1">
                     <img src="img/best-feed02.png" alt="도기프랜드 클라쎄밀 분유 180g">
                     <span>도기프랜드 클라쎄밀 분유 180g</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="2">
                     <img src="img/best-feed03.png" alt="디럭스락 분유 200g">
                     <span>디럭스락 분유 200g</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="3">
                     <img src="img/best-feed04.png" alt="뉴트리나 퍼피 2.1kg">
                     <span>뉴트리나 퍼피 2.1kg</span>
                   </a>
@@ -810,25 +810,25 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="4">
                     <img src="img/best-feed05.png" alt="뉴트리나 어덜트 연어 2.1kg">
                     <span>뉴트리나 어덜트 연어 2.1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="5">
                     <img src="img/best-snack01.png" alt="뉴트리나 다이어트 2.1kg">
                     <span>뉴트리나 다이어트 2.1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="6">
                     <img src="img/best-snack02.png" alt="CP 클래식 독 어덜트 소고기 2kg">
                     <span>CP 클래식 독 어덜트 소고기 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="7">
                     <img src="img/best-snack03.png" alt="CP 클래식 독 어덜트 닭고기 2kg">
                     <span>CP 클래식 독 어덜트 닭고기 2kg</span>
                   </a>
@@ -836,25 +836,25 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="8">
                     <img src="img/best-snack04.png" alt="CP 클래식 독 어덜트 양고기 2kg">
                     <span>CP 클래식 독 어덜트 양고기 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="9">
                     <img src="img/best-snack05.png" alt="CP 클래식 퍼피 밀크 2kg">
                     <span>CP 클래식 퍼피 밀크 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="10">
                     <img src="img/best-bath01.png" alt="CP 클래식 어덜트 스몰 브리드 소고기 2kg">
                     <span>CP 클래식 어덜트 스몰 브리드 소고기 2kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="11">
                     <img src="img/best-bath02.png" alt="소프트플러스 참좋은 황태사료 연어 1kg">
                     <span>소프트플러스 참좋은 황태사료 연어 1kg</span>
                   </a>
@@ -862,25 +862,25 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="12">
                     <img src="img/best-bath03.png" alt="소프트플러스 참좋은 황태사료 오리 1kg">
                     <span>소프트플러스 참좋은 황태사료 오리 1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="13">
                     <img src="img/best-bath04.png" alt="아침애 수제사료 한우 2.4kg">
                     <span>아침애 수제사료 한우 2.4kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="14">
                     <img src="img/best-bath05.png" alt="아침애 수제사료 오리 감자 연어 3kg">
                     <span>아침애 수제사료 오리 감자 연어 3kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="15">
                     <img src="img/best-md01.png" alt="아침애 수제사료 오리 연어 감자 1kg">
                     <span>아침애 수제사료 오리 연어 감자 1kg</span>
                   </a>
@@ -888,19 +888,19 @@
               </tr>
               <tr class="new-item">
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="16">
                     <img src="img/best-md02.png" alt="아침애 수제사료 피부 개선 3kg">
                     <span>아침애 수제사료 피부 개선 3kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="17">
                     <img src="img/best-md03.png" alt="아침애 수제사료 다이어트 1kg">
                     <span>아침애 수제사료 다이어트 1kg</span>
                   </a>
                 </td>
                 <td>
-                  <a href="#">
+                  <a href="#" data-target="18">
                     <img src="img/best-md04.png" alt="아침애 수제사료 한우 800g">
                     <span>아침애 수제사료 한우 800g</span>
                   </a>
@@ -910,7 +910,7 @@
           </div>
       </div>
     </div>
-  </container>
+  </main>
   <footer>
     <div class="customer">
       <div class="customer-center">
@@ -938,6 +938,67 @@
 
 
   <script>
+    const items=[]
+
+    items.push(
+      {name:"데이스포 초유분유 200g", price:"10,500", img:"img/best-feed01.png", itemDetail:"img/01.png"}
+    )
+    items.push(
+      {name:"도기프랜드 클라쎄밀 분유 180g", price:"6,750", img:"img/best-feed02.png", itemDetail:"img/02.png"}
+    )
+    items.push(
+      {name:"디럭스락 분유 200g", price:"8,250", img:"img/best-feed03.png", itemDetail:"img/03.png"}
+    )
+    items.push(
+      {name:"뉴트리나 퍼피 2.1kg", price:"12,500", img:"img/best-feed04.png", itemDetail:"img/04.png"}
+    )
+    items.push(
+      {name:"뉴트리나 어덜트 연어 2.1kg", price:"12,500", img:"img/best-feed05.png", itemDetail:"img/05.png"}
+    )
+    items.push(
+      {name:"뉴트리나 다이어트 2.1kg", price:"12,500", img:"img/best-snack01.png", itemDetail:"img/06.png"}
+    )
+    items.push(
+      {name:"CP 클래식 독 어덜트 소고기 2kg", price:"9,000", img:"img/best-snack02.png", itemDetail:"img/07.png"}
+    )
+    items.push(
+      {name:"CP 클래식 독 어덜트 닭고기 2kg", price:"9,000", img:"img/best-snack03.png", itemDetail:"img/08.png"}
+    )
+    items.push(
+      {name:"CP 클래식 독 어덜트 양고기 2kg", price:"9,000", img:"img/best-snack04.png", itemDetail:"img/09.png"}
+    )
+    items.push(
+      {name:"CP 클래식 퍼피 밀크 2kg", price:"9,000", img:"img/best-snack05.png", itemDetail:"img/10.png"}
+    )
+    items.push(
+      {name:"CP 클래식 어덜트 스몰 브리드 소고기 2kg", price:"9,000", img:"img/best-bath01.png", itemDetail:"img/11.png"}
+    )
+    items.push(
+      {name:"소프트플러스 참좋은 황태사료 연어 1kg", price:"12,600", img:"img/best-bath02.png", itemDetail:"img/12.png"}
+    )
+    items.push(
+      {name:"소프트플러스 참좋은 황태사료 오리 1kg", price:"12,600", img:"img/best-bath03.png", itemDetail:"img/13.png"}
+    )
+    items.push(
+      {name:"아침애 수제사료 한우 2.4kg", price:"44,000", img:"img/best-bath04.png", itemDetail:"img/14.png"}
+    )
+    items.push(
+      {name:"아침애 수제사료 오리 감자 연어 3kg", price:"44,000", img:"img/best-bath05.png", itemDetail:"img/15.png"}
+    )
+    items.push(
+      {name:"아침애 수제사료 오리 연어 감자 1kg", price:"15,400", img:"img/best-md01.png", itemDetail:"img/16.png"}
+    )
+    items.push(
+      {name:"아침애 수제사료 피부 개선 3kg", price:"44,000", img:"img/best-md02.png", itemDetail:"img/17.png"}
+    )
+    items.push(
+      {name:"아침애 수제사료 다이어트 1kg", price:"15,400", img:"img/best-md03.png", itemDetail:"img/18.png"}
+    )
+    items.push(
+      {name:"아침애 수제사료 한우 800g", price:"15,400", img:"img/best-md04.png", itemDetail:"img/19.png"}
+    )
+
+
     ///////////////////////////// 새로운 창에서 열기 /////////////////////////////
     function openNewWindowS(url){
       window.open(url, '_blank', 'width=450, height=450');
