--- a/workspace/login.html
+++ b/workspace/login.html
@@ -89,7 +89,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <div class="header">
     <nav class="navbar"> <!-- nav 태그 -->
       <div class="link"> <!-- 링크 -->
         <a href="link-bookmark.html" onclick="openNewWindowS(this.href); return false;"> <!-- 북마크 -->
@@ -141,175 +141,175 @@
       </a>
     </h1>
     <div class="category-bar"> <!-- 카테고리 메뉴 -->
-      <ul>
+      <ul id="bar-list">
         <li>  <!-- 사료 -->
-          <a href="#">사료</a>
+          <a href="item-list.html?categoryID=01&bordID=01">사료</a>
         </li>
         <li class="cList">  <!-- 간식 -->
-          <a href="#">간식</a>
+          <a href="item-list.html?categoryID=02&bordID=01">간식</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">껌</a>
+                <a href="item-list.html?categoryID=02&bordID=01">껌</a>
               </li>
               <hr>
               <li>
-                <a href="#">캔/통조림</a>
+                <a href="item-list.html?categoryID=02&bordID=02">캔/통조림</a>
               </li>
               <hr>
               <li>
-                <a href="#">육포사사미(대용량)</a>
+                <a href="item-list.html?categoryID=02&bordID=03">육포사사미(대용량)</a>
               </li>
               <hr>
               <li>
-                <a href="#">육포사사미(소용량)</a>
+                <a href="item-list.html?categoryID=02&bordID=04">육포사사미(소용량)</a>
               </li>
               <hr>
               <li>
-                <a href="#">소세지/습식간식</a>
+                <a href="item-list.html?categoryID=02&bordID=05">소세지/습식간식</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="cList">  <!-- 목욕용품 -->
-          <a href="#">목욕용품</a>
+          <a href="item-list.html?categoryID=03&bordID=01">목욕용품</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">타올/기타</a>
+                <a href="item-list.html?categoryID=03&bordID=01">타올/기타</a>
               </li>
               <hr>
               <li>
-                <a href="#">약용샴푸</a>
+                <a href="item-list.html?categoryID=03&bordID=02">약용샴푸</a>
               </li>
               <hr>
               <li>
-                <a href="#">샴푸린스겸용</a>
+                <a href="item-list.html?categoryID=03&bordID=03">샴푸린스겸용</a>
               </li>
               <hr>
               <li>
-                <a href="#">린스</a>
+                <a href="item-list.html?categoryID=03&bordID=04">린스</a>
               </li>
               <hr>
               <li>
-                <a href="#">샴푸</a>
+                <a href="item-list.html?categoryID=03&bordID=05">샴푸</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="cList">  <!-- 영양제/의약외품/치아관리 -->
-          <a href="#">영양제/의약외품/치아관리</a>
+          <a href="item-list.html?categoryID=04&bordID=01">영양제/의약외품/치아관리</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">종합영양제</a>
+                <a href="item-list.html?categoryID=04&bordID=01">종합영양제</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="cList">  <!-- 위생/배변/패드 -->
-          <a href="#">위생/배변/패드</a>
+          <a href="item-list.html?categoryID=05&bordID=01">위생/배변/패드</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">배변판/패드</a>
+                <a href="item-list.html?categoryID=05&bordID=01">배변판/패드</a>
               </li>
               <hr>
               <li>
-                <a href="#">기저귀/팬티</a>
+                <a href="item-list.html?categoryID=05&bordID=02">기저귀/팬티</a>
               </li>
             </ul>
           </div>
         </li>
         <li>  <!-- 이동용품/애견줄/하우스 -->
-          <a href="#">이동용품/애견줄/하우스</a>
+          <a href="item-list.html?categoryID=06&bordID=01">이동용품/애견줄/하우스</a>
         </li>
         <li>  <!-- 안전문/철장 -->
-          <a href="#">안전문/철장</a>
+          <a href="item-list.html?categoryID=07&bordID=01">안전문/철장</a>
         </li>
         <li>  <!-- 장난감/훈련용품 -->
-          <a href="#">장난감/훈련용품</a>
+          <a href="item-list.html?categoryID=08&bordID=01">장난감/훈련용품</a>
         </li>
         <li class="cList">  <!-- 급식기/급수기 -->
-          <a href="#">급식기/급수기</a>
+          <a href="item-list.html?categoryID=09&bordID=01">급식기/급수기</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">급식기/급수기</a>
+                <a href="item-list.html?categoryID=09&bordID=01">급식기/급수기</a>
               </li>
               <hr>
               <li>
-                <a href="#">쌍식기</a>
+                <a href="item-list.html?categoryID=09&bordID=02">쌍식기</a>
               </li>
               <hr>
               <li>
-                <a href="#">사료 보관통</a>
+                <a href="item-list.html?categoryID=09&bordID=03">사료 보관통</a>
               </li>
             </ul>
           </div>
         </li>
         <li>  <!-- 고양이 사료 -->
-          <a href="#">고양이 사료</a>
+          <a href="item-list.html?categoryID=10&bordID=01">고양이 사료</a>
         </li>
         <li class="cList">  <!-- 고양이 간식 -->
-          <a href="#">고양이 간식</a>
+          <a href="item-list.html?categoryID=11&bordID=01">고양이 간식</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">간식캔</a>
+                <a href="item-list.html?categoryID=11&bordID=01">간식캔</a>
               </li>
               <hr>
               <li>
-                <a href="#">파우치</a>
+                <a href="item-list.html?categoryID=11&bordID=02">파우치</a>
               </li>
               <hr>
               <li>
-                <a href="#">져키/동결건조</a>
+                <a href="item-list.html?categoryID=11&bordID=03">져키/동결건조</a>
               </li>
               <hr>
               <li>
-                <a href="#">스낵&드롭스</a>
+                <a href="item-list.html?categoryID=11&bordID=04">스낵&드롭스</a>
               </li>
               <hr>
               <li>
-                <a href="#">통살&닭가슴살</a>
+                <a href="item-list.html?categoryID=11&bordID=05">통살&닭가슴살</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="cList">  <!-- 모래/화장실/식시 -->
-          <a href="#">모래/화장실/식시</a>
+          <a href="item-list.html?categoryID=12&bordID=01">모래/화장실/식시</a>
           <div class="category-list" style="display: none;">
             <ul>
               <div class="category-list-arrow"></div>
               <li>
-                <a href="#">모래</a>
+                <a href="item-list.html?categoryID=12&bordID=01">모래</a>
               </li>
               <hr>
               <li>
-                <a href="#">화장실</a>
+                <a href="item-list.html?categoryID=12&bordID=02">화장실</a>
               </li>
               <hr>
               <li>
-                <a href="#">급식기/급수기</a>
+                <a href="item-list.html?categoryID=12&bordID=03">급식기/급수기</a>
               </li>
               <hr>
               <li>
-                <a href="#">쌍식기</a>
+                <a href="item-list.html?categoryID=12&bordID=04">쌍식기</a>
               </li>
             </ul>
           </div>
         </li>
       </ul>
     </div>
-  </header>
-  <main>
+  </div>
+  <div class=main>
     <form class="login">
       <div class="login-page">
         <div id="login-title">
@@ -339,7 +339,7 @@
         </div>
       </div>
     </form>
-  </main>
+  </div>
   <footer>
     <div class="customer">
       <div class="customer-center">
